Implement AI Engine Optimization (AEO) strategies

--- a/currency/cad-to-usd/index.html
+++ b/currency/cad-to-usd/index.html
@@ -33,26 +33,48 @@
     </style>
     <link rel="canonical" href="https://toolsified.com/currency/cad-to-usd" />
     <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [{
-    "@type": "Question",
-    "name": "How to convert CAD to USD?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Simply enter your CAD amount in the calculator above to see the real-time USD value."
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebApplication",
+          "name": "Canadian Dollars to US Dollars Converter",
+          "description": "Convert Canadian Dollars (CAD) to US Dollars (USD) instantly with live exchange rates.",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web",
+          "featureList": [
+            "Converts CAD to USD",
+            "Fetches real-time exchange rates",
+            "Processes calculations locally in the browser",
+            "Maintains user privacy with no data uploads"
+          ],
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [{
+            "@type": "Question",
+            "name": "How to convert CAD to USD?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Simply enter your CAD amount in the calculator above to see the real-time USD value."
+            }
+          }, {
+            "@type": "Question",
+            "name": "Does this tool upload my financial queries?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No. Toolsified processes all conversion formulas locally in your browser. Live exchange rates are fetched, but your exact calculation queries are not stored."
+            }
+          }]
+        }
+      ]
     }
-  }, {
-    "@type": "Question",
-    "name": "Is the CAD to USD rate accurate?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Yes, our tool uses real-time exchange rate data to provide up-to-date conversion values for CAD and USD."
-    }
-  }]
-}
-</script>
+    </script>
 </head>
 
 <body>
@@ -76,6 +98,17 @@
     </header>
     <!-- Main Content -->
     <main class="container">
+        <div class="card"
+            style="margin-top: 24px; margin-bottom: 24px; padding: 16px; background-color: var(--secondary-color); border: 1px solid var(--border-color); border-radius: 8px;">
+            <p style="margin-bottom: 8px; font-weight: 600; font-size: 0.95rem;">🛠️ Tool Capabilities Map</p>
+            <ul style="margin: 0; padding-left: 20px; font-size: 0.9rem;">
+                <li><strong>Purpose:</strong> Converts Canadian Dollars (CAD) to US Dollars (USD).</li>
+                <li><strong>Input Format:</strong> Amount of CAD fiat currency.</li>
+                <li><strong>Output Format:</strong> Converted amount in USD with live exchange rate.</li>
+                <li><strong>Processing Method:</strong> Executed securely and locally in your web browser.</li>
+            </ul>
+        </div>
+
         <h1 id="page-title">Live Canadian Dollars to US Dollars Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live CAD to USD exchange
             rate calculator.</p>
@@ -113,6 +146,16 @@
                 registration—just fast, browser-based utility. Check the quick reference table below for common
                 conversion increments, or use the exact calculator for specific amounts.</p>
 
+            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Technical Capabilities</h3>
+            <ul style="text-align: left; margin-bottom: 24px; padding-left: 20px;">
+                <li style="margin-bottom: 8px;">Bi-directional conversion between CAD and USD</li>
+                <li style="margin-bottom: 8px;">Retrieves accurate spot exchange rates automatically</li>
+                <li style="margin-bottom: 8px;">Local browser processing ensures no server tracking of your calculations
+                </li>
+                <li style="margin-bottom: 8px;">Automatically generates quick reference tables based on current rates
+                </li>
+            </ul>
+
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Quick Reference: CAD to USD</h3>
             <div class="table-container">
                 <table style="margin-top: 0; margin-bottom: 32px;">
@@ -149,10 +192,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/eur-to-dkk" style="color: var(--primary-color); text-decoration: underline;">EUR to DKK Rate</a></p>
-<p><a href="/currency/usd-to-hkd" style="color: var(--primary-color); text-decoration: underline;">USD to HKD Rate</a></p>
-<p><a href="/currency/usd-to-sek" style="color: var(--primary-color); text-decoration: underline;">USD to SEK Rate</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+                <p><a href="/currency/inr-to-usd" style="color: var(--primary-color); text-decoration: underline;">INR to USD Rate</a></p>
+<p><a href="/currency/usd-to-cad" style="color: var(--primary-color); text-decoration: underline;">USD to CAD Rate</a></p>
+<p><a href="/currency/chf-to-eur" style="color: var(--primary-color); text-decoration: underline;">CHF to EUR Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
@@ -166,30 +209,32 @@
                     above to see the real-time USD value. We fetch real-time rates instantly.</p>
             </div>
             <div class="faq-item" style="margin-bottom: 16px;">
-                <strong>Is the CAD to USD rate accurate?</strong>
-                <p style="text-align: left; margin-bottom: 0;">Yes, our tool uses real-time exchange rate data to
-                    provide up-to-date conversion values for CAD and USD.</p>
+                <strong>Does this tool upload my financial queries?</strong>
+                <p style="text-align: left; margin-bottom: 0;">No. Toolsified processes all conversion formulas locally
+                    in your browser to calculate the CAD to USD difference. Only the live rate is
+                    fetched from the server.</p>
             </div>
         </div>
 
     </main>
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-    <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-      <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
-      <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
-        <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
-        <span>|</span>
-        <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
-        <span>|</span>
-        <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
-        <span>|</span>
-        <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
-      </div>
-      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-      <p style="margin: 0;">Location: Norway</p>
-    </div>
-  </footer>
+        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
+            <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
+                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+                <span>|</span>
+                <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+                <span>|</span>
+                <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+                <span>|</span>
+                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+            </div>
+            <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com"
+                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+            <p style="margin: 0;">Location: Norway</p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
 
     <script>
