--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
     crossorigin="anonymous"></script>
   <link rel="canonical" href="https://toolsified.com/" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Toolsified",
+    "description": "Fast, privacy-friendly online utilities designed to run instantly in your web browser without uploading your sensitive data.",
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Web",
+    "featureList": [
+      "Time Zone Conversions",
+      "Currency Exchange Rates",
+      "Crypto Profit Tracking",
+      "Natural Language Time Code Parsing"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
 </head>
 
 <body>
@@ -64,7 +85,8 @@
         <span>|</span>
         <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
       </div>
-      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com"
+          style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
       <p style="margin: 0;">Location: Norway</p>
     </div>
   </footer>
