--- a/scripts/timezone-template.html
+++ b/scripts/timezone-template.html
@@ -16,27 +16,57 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
     <link rel="canonical" href="https://toolsified.com/time-zone/[FROM_VAR]-to-[TO_VAR]" />
+    <link rel="canonical" href="https://toolsified.com/time-zone/[FROM_VAR]-to-[TO_VAR]" />
     <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [{
-    "@type": "Question",
-    "name": "How do I compare [FROM_NAME] to [TO_NAME]?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Simply enter your local time in the tool above to see the exact corresponding time in [TO_NAME]."
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebApplication",
+          "name": "[FROM_NAME] to [TO_NAME] Converter",
+          "description": "Convert [FROM_NAME] to [TO_NAME] instantly. Compare schedules between [FROM_VAR] and [TO_VAR] with exact time differences.",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web",
+          "featureList": [
+            "Converts [FROM_NAME] to [TO_NAME]",
+            "Automatically accounts for Daylight Saving Time (DST) rules",
+            "Processes calculations locally in the browser",
+            "Protects user data with no server tracking"
+          ],
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [{
+            "@type": "Question",
+            "name": "How do I compare [FROM_NAME] to [TO_NAME]?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Simply enter your local time in the tool above to see the exact corresponding time in [TO_NAME]."
+            }
+          }, {
+            "@type": "Question",
+            "name": "Does the converter handle Daylight Saving Time (DST) for [TO_NAME]?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, our tool automatically accounts for DST rules for both [FROM_NAME] and [TO_NAME] based on the specific date you choose."
+            }
+          }, {
+            "@type": "Question",
+            "name": "Where does the time zone calculation occur?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "All [FROM_NAME] and [TO_NAME] calculations happen entirely in your local web browser, meaning your scheduling data remains private and is never uploaded."
+            }
+          }]
+        }
+      ]
     }
-  }, {
-    "@type": "Question",
-    "name": "Does the converter handle Daylight Saving Time (DST) for [TO_NAME]?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Yes, our tool automatically accounts for DST rules for both [FROM_NAME] and [TO_NAME] based on the specific date you choose."
-    }
-  }]
-}
-</script>
+    </script>
 </head>
 
 <body>
@@ -60,6 +90,17 @@
     </header>
     <!-- Main Content -->
     <main class="container">
+        <div class="card"
+            style="margin-top: 24px; margin-bottom: 24px; padding: 16px; background-color: var(--secondary-color); border: 1px solid var(--border-color); border-radius: 8px;">
+            <p style="margin-bottom: 8px; font-weight: 600; font-size: 0.95rem;">🛠️ Tool Capabilities Map</p>
+            <ul style="margin: 0; padding-left: 20px; font-size: 0.9rem;">
+                <li><strong>Purpose:</strong> Converts time and schedule dates between [FROM_NAME] and [TO_NAME].</li>
+                <li><strong>Input Format:</strong> Local date and time selection.</li>
+                <li><strong>Output Format:</strong> Relative time difference and exact local output matrix.</li>
+                <li><strong>Processing Method:</strong> Executed entirely securely in your web browser.</li>
+            </ul>
+        </div>
+
         <h1 id="page-title">Current [FROM_NAME] to [TO_NAME] Time Converter ([YEAR])</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between [FROM_NAME]
             and [TO_NAME].</p>
@@ -105,6 +146,14 @@
                 the <strong>[FROM_NAME]</strong> input above, and the tool will immediately output the corresponding
                 local time in <strong>[TO_NAME]</strong>.</p>
 
+            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Technical Capabilities</h3>
+            <ul style="text-align: left; margin-bottom: 24px; padding-left: 20px;">
+                <li style="margin-bottom: 8px;">Resolves complex Daylight Saving Time shifts programmatically</li>
+                <li style="margin-bottom: 8px;">Outputs accurate ISO strings and local date formatting</li>
+                <li style="margin-bottom: 8px;">100% local browser processing—no server transmission</li>
+                <li style="margin-bottom: 8px;">Allows combining multiple target time zones beyond [TO_NAME]</li>
+            </ul>
+
             <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
@@ -118,6 +167,12 @@
                 <p style="text-align: left; margin-bottom: 0;">Yes, our tool automatically accounts for DST rules for
                     both [FROM_NAME] and [TO_NAME] based on the exact date selected.</p>
             </div>
+            <div class="faq-item" style="margin-bottom: 16px;">
+                <strong>Where does the time zone calculation occur?</strong>
+                <p style="text-align: left; margin-bottom: 0;">All [FROM_NAME] and [TO_NAME] calculations happen
+                    entirely in your local web browser, meaning your scheduling data remains private and is never
+                    uploaded.</p>
+            </div>
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
@@ -129,21 +184,22 @@
     </main>
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-    <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-      <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
-      <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
-        <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
-        <span>|</span>
-        <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
-        <span>|</span>
-        <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
-        <span>|</span>
-        <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
-      </div>
-      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-      <p style="margin: 0;">Location: Norway</p>
-    </div>
-  </footer>
+        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
+            <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
+                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+                <span>|</span>
+                <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+                <span>|</span>
+                <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+                <span>|</span>
+                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+            </div>
+            <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com"
+                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+            <p style="margin: 0;">Location: Norway</p>
+        </div>
+    </footer>
 
     <script>
         const { DateTime } = luxon;
