--- a/crypto/btc-to-usd/index.html
+++ b/crypto/btc-to-usd/index.html
@@ -16,26 +16,55 @@
         crossorigin="anonymous"></script>
     <link rel="canonical" href="https://toolsified.com/crypto/btc-to-usd" />
     <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [{
-    "@type": "Question",
-    "name": "How do I calculate my Bitcoin profit in US Dollars?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Enter your BTC amount, select your buy and sell dates, and our tool uses real historic exchange rates to calculate your exact profit or loss in USD."
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebApplication",
+          "name": "Bitcoin to US Dollars Profit/Loss Tracker",
+          "description": "Calculate exact historic profit and loss for BTC to USD. All calculations run locally in your browser.",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web",
+          "featureList": [
+            "Converts BTC to USD",
+            "Calculates historical profit and loss",
+            "Processes calculations locally in the browser",
+            "Maintains user privacy with no data uploads"
+          ],
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [{
+            "@type": "Question",
+            "name": "How do I calculate my Bitcoin profit in US Dollars?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Enter your BTC amount, select your buy and sell dates, and our tool uses real historic exchange rates to calculate your exact profit or loss in USD."
+            }
+          }, {
+            "@type": "Question",
+            "name": "Does this tool upload my financial data?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No. Toolsified processes all BTC calculations locally in your browser. No transaction data is ever stored or transmitted to our servers."
+            }
+          }, {
+            "@type": "Question",
+            "name": "What processing method does this calculator use?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "This tool uses local browser processing to execute the profit/loss logic instantly."
+            }
+          }]
+        }
+      ]
     }
-  }, {
-    "@type": "Question",
-    "name": "Is my BTC portfolio data secure?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Yes, Toolsified processes all conversions locally in your browser. No BTC transaction data is ever stored or transmitted to our servers."
-    }
-  }]
-}
-</script>
+    </script>
 </head>
 
 <body>
@@ -59,6 +88,18 @@
     </header>
 
     <main class="container">
+        <div class="card"
+            style="margin-top: 24px; margin-bottom: 24px; padding: 16px; background-color: var(--secondary-color); border: 1px solid var(--border-color); border-radius: 8px;">
+            <p style="margin-bottom: 8px; font-weight: 600; font-size: 0.95rem;">🛠️ Tool Capabilities Map</p>
+            <ul style="margin: 0; padding-left: 20px; font-size: 0.9rem;">
+                <li><strong>Purpose:</strong> Calculates historical profit and loss for BTC to USD.
+                </li>
+                <li><strong>Input Format:</strong> Amount of crypto, buy date, and sell date.</li>
+                <li><strong>Output Format:</strong> Exact return on investment in USD fiat.</li>
+                <li><strong>Processing Method:</strong> Executed entirely locally in your web browser.</li>
+            </ul>
+        </div>
+
         <h1 style="text-align: center; margin-bottom: 8px;">Bitcoin to US Dollars Historical Profit & Loss Calculator
         </h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
@@ -98,13 +139,21 @@
                 functions entirely within your browser, ensuring your <strong>BTC</strong> financial data
                 remains private and secure.</p>
 
+            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Technical Capabilities</h3>
+            <ul style="text-align: left; margin-bottom: 24px; padding-left: 20px;">
+                <li style="margin-bottom: 8px;">Supports tracking for multiple BTC transactions</li>
+                <li style="margin-bottom: 8px;">Retrieves accurate historic exchange rates for USD</li>
+                <li style="margin-bottom: 8px;">100% local browser processing—no server transmission</li>
+                <li style="margin-bottom: 8px;">Calculates exact profit and loss differentials automatically</li>
+            </ul>
+
             <div class="section">
                 <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
                 <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                    <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+                    <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
 <p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
-<p><a href="/currency/usd-to-jpy" style="color: var(--primary-color); text-decoration: underline;">USD to JPY Rate</a></p>
+<p><a href="/currency/aud-to-eur" style="color: var(--primary-color); text-decoration: underline;">AUD to EUR Rate</a></p>
                     <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                             Crypto Converter Hub</a></p>
                 </div>
@@ -121,31 +170,36 @@
                         The tool uses real historic exchange rates to calculate your profit or loss in USD.</p>
                 </div>
                 <div class="faq-item" style="margin-bottom: 16px;">
-                    <strong>Is my BTC portfolio data secure?</strong>
-                    <p style="text-align: left; margin-bottom: 0;">Yes. All calculations happen instantly in your
-                        browser
-                        session and your data is never saved or transmitted to our servers.</p>
+                    <strong>Does this tool upload my financial data?</strong>
+                    <p style="text-align: left; margin-bottom: 0;">No. All calculations happen instantly in your browser
+                        session and your transaction data is never saved or transmitted to our servers.</p>
+                </div>
+                <div class="faq-item" style="margin-bottom: 16px;">
+                    <strong>What processing method does this calculator use?</strong>
+                    <p style="text-align: left; margin-bottom: 0;">This tool uses local browser processing (client-side
+                        JavaScript) to execute the BTC profit/loss logic instantly.</p>
                 </div>
             </div>
     </main>
 
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-    <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-      <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
-      <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
-        <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
-        <span>|</span>
-        <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
-        <span>|</span>
-        <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
-        <span>|</span>
-        <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
-      </div>
-      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-      <p style="margin: 0;">Location: Norway</p>
-    </div>
-  </footer>
+        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
+            <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
+                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+                <span>|</span>
+                <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+                <span>|</span>
+                <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+                <span>|</span>
+                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+            </div>
+            <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com"
+                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+            <p style="margin: 0;">Location: Norway</p>
+        </div>
+    </footer>
 
     <script>
         const supportedCryptos = ['BTC', 'ETH', 'SOL'];
