--- a/time-zone/jst-to-pst/index.html
+++ b/time-zone/jst-to-pst/index.html
@@ -16,27 +16,57 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
     <link rel="canonical" href="https://toolsified.com/time-zone/jst-to-pst" />
+    <link rel="canonical" href="https://toolsified.com/time-zone/jst-to-pst" />
     <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [{
-    "@type": "Question",
-    "name": "How do I compare Japan Standard Time (JST) to Pacific Time (PT)?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Simply enter your local time in the tool above to see the exact corresponding time in Pacific Time (PT)."
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebApplication",
+          "name": "Japan Standard Time (JST) to Pacific Time (PT) Converter",
+          "description": "Convert Japan Standard Time (JST) to Pacific Time (PT) instantly. Compare schedules between jst and pst with exact time differences.",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web",
+          "featureList": [
+            "Converts Japan Standard Time (JST) to Pacific Time (PT)",
+            "Automatically accounts for Daylight Saving Time (DST) rules",
+            "Processes calculations locally in the browser",
+            "Protects user data with no server tracking"
+          ],
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [{
+            "@type": "Question",
+            "name": "How do I compare Japan Standard Time (JST) to Pacific Time (PT)?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Simply enter your local time in the tool above to see the exact corresponding time in Pacific Time (PT)."
+            }
+          }, {
+            "@type": "Question",
+            "name": "Does the converter handle Daylight Saving Time (DST) for Pacific Time (PT)?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, our tool automatically accounts for DST rules for both Japan Standard Time (JST) and Pacific Time (PT) based on the specific date you choose."
+            }
+          }, {
+            "@type": "Question",
+            "name": "Where does the time zone calculation occur?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "All Japan Standard Time (JST) and Pacific Time (PT) calculations happen entirely in your local web browser, meaning your scheduling data remains private and is never uploaded."
+            }
+          }]
+        }
+      ]
     }
-  }, {
-    "@type": "Question",
-    "name": "Does the converter handle Daylight Saving Time (DST) for Pacific Time (PT)?",
-    "acceptedAnswer": {
-      "@type": "Answer",
-      "text": "Yes, our tool automatically accounts for DST rules for both Japan Standard Time (JST) and Pacific Time (PT) based on the specific date you choose."
-    }
-  }]
-}
-</script>
+    </script>
 </head>
 
 <body>
@@ -60,6 +90,17 @@
     </header>
     <!-- Main Content -->
     <main class="container">
+        <div class="card"
+            style="margin-top: 24px; margin-bottom: 24px; padding: 16px; background-color: var(--secondary-color); border: 1px solid var(--border-color); border-radius: 8px;">
+            <p style="margin-bottom: 8px; font-weight: 600; font-size: 0.95rem;">🛠️ Tool Capabilities Map</p>
+            <ul style="margin: 0; padding-left: 20px; font-size: 0.9rem;">
+                <li><strong>Purpose:</strong> Converts time and schedule dates between Japan Standard Time (JST) and Pacific Time (PT).</li>
+                <li><strong>Input Format:</strong> Local date and time selection.</li>
+                <li><strong>Output Format:</strong> Relative time difference and exact local output matrix.</li>
+                <li><strong>Processing Method:</strong> Executed entirely securely in your web browser.</li>
+            </ul>
+        </div>
+
         <h1 id="page-title">Current Japan Standard Time (JST) to Pacific Time (PT) Time Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Japan Standard Time (JST)
             and Pacific Time (PT).</p>
@@ -105,6 +146,14 @@
                 the <strong>Japan Standard Time (JST)</strong> input above, and the tool will immediately output the corresponding
                 local time in <strong>Pacific Time (PT)</strong>.</p>
 
+            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Technical Capabilities</h3>
+            <ul style="text-align: left; margin-bottom: 24px; padding-left: 20px;">
+                <li style="margin-bottom: 8px;">Resolves complex Daylight Saving Time shifts programmatically</li>
+                <li style="margin-bottom: 8px;">Outputs accurate ISO strings and local date formatting</li>
+                <li style="margin-bottom: 8px;">100% local browser processing—no server transmission</li>
+                <li style="margin-bottom: 8px;">Allows combining multiple target time zones beyond Pacific Time (PT)</li>
+            </ul>
+
             <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
@@ -118,13 +167,19 @@
                 <p style="text-align: left; margin-bottom: 0;">Yes, our tool automatically accounts for DST rules for
                     both Japan Standard Time (JST) and Pacific Time (PT) based on the exact date selected.</p>
             </div>
+            <div class="faq-item" style="margin-bottom: 16px;">
+                <strong>Where does the time zone calculation occur?</strong>
+                <p style="text-align: left; margin-bottom: 0;">All Japan Standard Time (JST) and Pacific Time (PT) calculations happen
+                    entirely in your local web browser, meaning your scheduling data remains private and is never
+                    uploaded.</p>
+            </div>
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/gmt-to-ist" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to India Standard Time (IST)</a></p>
-<p><a href="/time-zone/sgt-to-pst" style="color: var(--primary-color); text-decoration: underline;">Singapore Time (SGT) to Pacific Time (PT)</a></p>
-<p><a href="/time-zone/pst-to-ist" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to India Standard Time (IST)</a></p>
-<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
+                <p><a href="/time-zone/jst-to-pst" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Pacific Time (PT)</a></p>
+<p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
+<p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
@@ -132,21 +187,22 @@
     </main>
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-    <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-      <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
-      <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
-        <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
-        <span>|</span>
-        <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
-        <span>|</span>
-        <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
-        <span>|</span>
-        <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
-      </div>
-      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-      <p style="margin: 0;">Location: Norway</p>
-    </div>
-  </footer>
+        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
+            <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
+                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+                <span>|</span>
+                <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+                <span>|</span>
+                <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+                <span>|</span>
+                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+            </div>
+            <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com"
+                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+            <p style="margin: 0;">Location: Norway</p>
+        </div>
+    </footer>
 
     <script>
         const { DateTime } = luxon;
