Professional visual overhaul of the homepage

--- a/index.html
+++ b/index.html
@@ -65,10 +65,34 @@
       work instantly in your browser.</p>
 
     <div class="tool-list">
-      <a href="/time-code" class="tool">🕒 Time-code Converter</a>
-      <a href="/multi-timezone" class="tool">🌍 Multi Time Zone Converter</a>
-      <a href="/currency" class="tool">💱 Currency Converter</a>
-      <a href="/crypto" class="tool">🪙 Crypto Converter</a>
+      <a href="/time-code" class="tool">
+        <span class="tool-icon">🕒</span>
+        <div class="tool-content">
+          <h3>Time-code Converter</h3>
+          <p>Instantly translate natural language time codes to your local time zone.</p>
+        </div>
+      </a>
+      <a href="/multi-timezone" class="tool">
+        <span class="tool-icon">🌍</span>
+        <div class="tool-content">
+          <h3>Multi Time Zone</h3>
+          <p>Compare multiple cities and plan international meetings with ease.</p>
+        </div>
+      </a>
+      <a href="/currency" class="tool">
+        <span class="tool-icon">💱</span>
+        <div class="tool-content">
+          <h3>Currency Converter</h3>
+          <p>Live exchange rates for 50+ fiat currencies with local processing.</p>
+        </div>
+      </a>
+      <a href="/crypto" class="tool">
+        <span class="tool-icon">🪙</span>
+        <div class="tool-content">
+          <h3>Crypto Profit Tracker</h3>
+          <p>Calculate historic profit and loss for major cryptocurrencies securely.</p>
+        </div>
+      </a>
       <!-- Add more tools here later -->
     </div>
   </main>
