--- a/crypto/eth-to-usd/index.html
+++ b/crypto/eth-to-usd/index.html
@@ -151,9 +151,9 @@
                 <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
                 <div class="internal-links-cluster" style="margin-bottom: 32px;">
                     <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
 <p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
-<p><a href="/currency/eur-to-dkk" style="color: var(--primary-color); text-decoration: underline;">EUR to DKK Rate</a></p>
+<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+<p><a href="/currency/krw-to-usd" style="color: var(--primary-color); text-decoration: underline;">KRW to USD Rate</a></p>
                     <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                             Crypto Converter Hub</a></p>
                 </div>
