--- a/currency/aud-to-gbp/index.html
+++ b/currency/aud-to-gbp/index.html
@@ -192,10 +192,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/aud-to-gbp" style="color: var(--primary-color); text-decoration: underline;">AUD to GBP Rate</a></p>
-<p><a href="/currency/eur-to-aud" style="color: var(--primary-color); text-decoration: underline;">EUR to AUD Rate</a></p>
-<p><a href="/currency/eur-to-usd" style="color: var(--primary-color); text-decoration: underline;">EUR to USD Rate</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+                <p><a href="/currency/chf-to-eur" style="color: var(--primary-color); text-decoration: underline;">CHF to EUR Rate</a></p>
+<p><a href="/currency/eur-to-chf" style="color: var(--primary-color); text-decoration: underline;">EUR to CHF Rate</a></p>
+<p><a href="/currency/usd-to-aud" style="color: var(--primary-color); text-decoration: underline;">USD to AUD Rate</a></p>
+<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
