--- a/currency/nok-to-usd/index.html
+++ b/currency/nok-to-usd/index.html
@@ -192,10 +192,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/chf-to-usd" style="color: var(--primary-color); text-decoration: underline;">CHF to USD Rate</a></p>
-<p><a href="/currency/gbp-to-aud" style="color: var(--primary-color); text-decoration: underline;">GBP to AUD Rate</a></p>
-<p><a href="/currency/cny-to-usd" style="color: var(--primary-color); text-decoration: underline;">CNY to USD Rate</a></p>
-<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+                <p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
+<p><a href="/currency/eur-to-aud" style="color: var(--primary-color); text-decoration: underline;">EUR to AUD Rate</a></p>
+<p><a href="/currency/usd-to-hkd" style="color: var(--primary-color); text-decoration: underline;">USD to HKD Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
