--- a/currency/usd-to-hkd/index.html
+++ b/currency/usd-to-hkd/index.html
@@ -192,9 +192,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/eur-to-sek" style="color: var(--primary-color); text-decoration: underline;">EUR to SEK Rate</a></p>
-<p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
-<p><a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR Rate</a></p>
+                <p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
+<p><a href="/currency/nzd-to-usd" style="color: var(--primary-color); text-decoration: underline;">NZD to USD Rate</a></p>
+<p><a href="/currency/usd-to-sgd" style="color: var(--primary-color); text-decoration: underline;">USD to SGD Rate</a></p>
 <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
