Standardize layout widths and footers across all pages

--- a/privacy.html
+++ b/privacy.html
@@ -94,23 +94,22 @@
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-    <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-      <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
-      <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
-        <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
-        <span>|</span>
-        <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
-        <span>|</span>
-        <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
-        <span>|</span>
-        <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
-      </div>
-      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-      <p style="margin: 0;">Location: Norway</p>
-    </div>
-  </footer>
+    <footer class="site-footer">
+        <div class="footer-container">
+            <p class="footer-tagline">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+            <div class="footer-links">
+                <a href="/privacy">Privacy Policy</a>
+                <span>|</span>
+                <a href="/terms">Terms</a>
+                <span>|</span>
+                <a href="/about">About</a>
+                <span>|</span>
+                <a href="/contact">Contact</a>
+            </div>
+            <p class="footer-contact">Contact: <a href="mailto:info@toolsified.com">info@toolsified.com</a></p>
+            <p class="footer-location">Location: Norway</p>
+        </div>
+    </footer>
 </body>
 
 </html>
