--- a/currency/eur-to-jpy/index.html
+++ b/currency/eur-to-jpy/index.html
@@ -192,10 +192,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/cny-to-usd" style="color: var(--primary-color); text-decoration: underline;">CNY to USD Rate</a></p>
-<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
-<p><a href="/currency/krw-to-usd" style="color: var(--primary-color); text-decoration: underline;">KRW to USD Rate</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+                <p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
+<p><a href="/currency/gbp-to-usd" style="color: var(--primary-color); text-decoration: underline;">GBP to USD Rate</a></p>
+<p><a href="/currency/eur-to-nok" style="color: var(--primary-color); text-decoration: underline;">EUR to NOK Rate</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
@@ -218,21 +218,20 @@
 
     </main>
     <!-- Footer -->
-    <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
-            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
-                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+    <footer class="site-footer">
+        <div class="footer-container">
+            <p class="footer-tagline">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+            <div class="footer-links">
+                <a href="/privacy">Privacy Policy</a>
                 <span>|</span>
-                <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+                <a href="/terms">Terms</a>
                 <span>|</span>
-                <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+                <a href="/about">About</a>
                 <span>|</span>
-                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+                <a href="/contact">Contact</a>
             </div>
-            <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com"
-                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-            <p style="margin: 0;">Location: Norway</p>
+            <p class="footer-contact">Contact: <a href="mailto:info@toolsified.com">info@toolsified.com</a></p>
+            <p class="footer-location">Location: Norway</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
