--- a/time-zone/cet-to-pst/index.html
+++ b/time-zone/cet-to-pst/index.html
@@ -176,31 +176,30 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/aet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Pacific Time (PT)</a></p>
-<p><a href="/time-zone/mt-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Mountain Time (MT) to London (GMT/BST)</a></p>
-<p><a href="/time-zone/jst-to-est" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Eastern Time (ET)</a></p>
-<p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
+                <p><a href="/time-zone/cet-to-est" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/aet-to-est" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
+<p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
         </div>
     </main>
     <!-- Footer -->
-    <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
-            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
-                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+    <footer class="site-footer">
+        <div class="footer-container">
+            <p class="footer-tagline">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+            <div class="footer-links">
+                <a href="/privacy">Privacy Policy</a>
                 <span>|</span>
-                <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+                <a href="/terms">Terms</a>
                 <span>|</span>
-                <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+                <a href="/about">About</a>
                 <span>|</span>
-                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+                <a href="/contact">Contact</a>
             </div>
-            <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com"
-                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-            <p style="margin: 0;">Location: Norway</p>
+            <p class="footer-contact">Contact: <a href="mailto:info@toolsified.com">info@toolsified.com</a></p>
+            <p class="footer-location">Location: Norway</p>
         </div>
     </footer>
 
