feat: add new wrench favicon to all pages and templates

--- a/currency.html
+++ b/currency.html
@@ -8,6 +8,7 @@
   <title>Currency Converter – Toolsified</title>
   <meta name="description"
     content="Convert currencies instantly with live exchange rates. Smart, fast and free currency tool from Toolsified." />
+  <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="stylesheet" href="/style.css?v=2.2" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
