--- a/currency/usd-to-inr/index.html
+++ b/currency/usd-to-inr/index.html
@@ -8,6 +8,7 @@
     <title>Live USD to INR Exchange Rate (2026) | Convert US Dollars</title>
     <meta name="description"
         content="Convert US Dollars (USD) to Indian Rupees (INR) instantly with live exchange rates. Fast & free currency converter." />
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
