--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description"
     content="Toolsified is your hub for simple, smart, and free online tools – starting with time zone converters. More to come." />
   <title>Toolsified – Smart tools for everyday tasks</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="stylesheet" href="/style.css?v=2.2" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
