--- a/scripts/currency-template.html
+++ b/scripts/currency-template.html
@@ -8,6 +8,7 @@
     <title>Live [FROM_TICKER] to [TO_TICKER] Exchange Rate ([YEAR]) | Convert [FROM_NAME]</title>
     <meta name="description"
         content="Convert [FROM_NAME] ([FROM_TICKER]) to [TO_NAME] ([TO_TICKER]) instantly with live exchange rates. Fast & free currency converter." />
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
