--- a/currency/aud-to-gbp/index.html
+++ b/currency/aud-to-gbp/index.html
@@ -8,6 +8,7 @@
     <title>Live AUD to GBP Exchange Rate (2026) | Convert Australian Dollars</title>
     <meta name="description"
         content="Convert Australian Dollars (AUD) to British Pounds (GBP) instantly with live exchange rates. Fast & free currency converter." />
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
