--- a/currency/cad-to-eur/index.html
+++ b/currency/cad-to-eur/index.html
@@ -8,6 +8,7 @@
     <title>Live CAD to EUR Exchange Rate (2026) | Convert Canadian Dollars</title>
     <meta name="description"
         content="Convert Canadian Dollars (CAD) to Euros (EUR) instantly with live exchange rates. Fast & free currency converter." />
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
