--- a/currency/eur-to-cad/index.html
+++ b/currency/eur-to-cad/index.html
@@ -8,6 +8,7 @@
     <title>Live EUR to CAD Exchange Rate (2026) | Convert Euros</title>
     <meta name="description"
         content="Convert Euros (EUR) to Canadian Dollars (CAD) instantly with live exchange rates. Fast & free currency converter." />
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
