--- a/currency/hkd-to-usd/index.html
+++ b/currency/hkd-to-usd/index.html
@@ -8,6 +8,7 @@
     <title>Live HKD to USD Exchange Rate (2026) | Convert Hong Kong Dollars</title>
     <meta name="description"
         content="Convert Hong Kong Dollars (HKD) to US Dollars (USD) instantly with live exchange rates. Fast & free currency converter." />
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
