--- a/currency/sgd-to-usd/index.html
+++ b/currency/sgd-to-usd/index.html
@@ -8,6 +8,7 @@
     <title>Live SGD to USD Exchange Rate (2026) | Convert Singapore Dollars</title>
     <meta name="description"
         content="Convert Singapore Dollars (SGD) to US Dollars (USD) instantly with live exchange rates. Fast & free currency converter." />
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
