--- a/scripts/crypto-template.html
+++ b/scripts/crypto-template.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Track your [FROM_NAME] ([FROM_TICKER]) investments. Convert [FROM_TICKER] to [TO_NAME] ([TO_TICKER]) and calculate exact historic profit and loss instantly." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
