--- a/time-zone/cst-to-est/index.html
+++ b/time-zone/cst-to-est/index.html
@@ -8,6 +8,7 @@
         content="Convert China Standard Time (CST) to Eastern Time (ET) instantly. Compare schedules between cst and est with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
