Standardize homepage tool icons with consistent SVG style

--- a/index.html
+++ b/index.html
@@ -79,59 +79,100 @@
     <h1>Welcome to Toolsified</h1>
     <p>Toolsified provides fast, privacy-friendly online tools for time, currency, and crypto conversions — designed to
       work instantly in your browser.</p>
-
     <div class="tool-list">
       <a href="/time-code" class="tool">
-        <span class="tool-icon">🕒</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="9"></circle>
+            <path d="M12 7v5l3 2"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Time-code Converter</h3>
           <p>Instantly translate natural language time codes to your local time zone.</p>
         </div>
       </a>
       <a href="/multi-timezone" class="tool">
-        <span class="tool-icon">🌍</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="9"></circle>
+            <path d="M3 12h18M12 3a13 13 0 0 1 0 18M12 3a13 13 0 0 0 0 18"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Multi Time Zone</h3>
           <p>Compare multiple cities and plan international meetings with ease.</p>
         </div>
       </a>
       <a href="/currency" class="tool">
-        <span class="tool-icon">💱</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <path d="M4 7h10a3 3 0 1 1 0 6H8a3 3 0 1 0 0 6h12"></path>
+            <path d="M6 5v14M18 5v14"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Currency Converter</h3>
           <p>Live exchange rates for 50+ fiat currencies with local processing.</p>
         </div>
       </a>
       <a href="/crypto" class="tool">
-        <span class="tool-icon">🪙</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="8"></circle>
+            <path d="M10 9h3a2 2 0 1 1 0 4h-3h3a2 2 0 1 1 0 4h-3"></path>
+            <path d="M12 7v10"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Crypto Profit Tracker</h3>
           <p>Calculate historic profit and loss for major cryptocurrencies securely.</p>
         </div>
       </a>
       <a href="/business-days" class="tool">
-        <span class="tool-icon">BD</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <rect x="4" y="5" width="16" height="15" rx="2"></rect>
+            <path d="M8 3v4M16 3v4M4 10h16"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Business Days Calculator</h3>
           <p>Count working days between two dates with optional country holidays.</p>
         </div>
       </a>
       <a href="/meeting-overlap" class="tool">
-        <span class="tool-icon">MO</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <circle cx="9" cy="10" r="3"></circle>
+            <circle cx="15" cy="10" r="3"></circle>
+            <path d="M4 19a5 5 0 0 1 10 0M10 19a5 5 0 0 1 10 0"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Meeting Overlap Finder</h3>
           <p>Find shared working-hour windows across 2 to 5 global time zones.</p>
         </div>
       </a>
       <a href="/inflation-calculator" class="tool">
-        <span class="tool-icon">IN</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <path d="M4 19h16M6 16l4-4 3 3 5-6"></path>
+            <path d="M18 9h2v2"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Inflation Calculator</h3>
           <p>Estimate how purchasing power changes over time for major countries.</p>
         </div>
       </a>
       <a href="/crypto-tax-estimator" class="tool">
-        <span class="tool-icon">CT</span>
+        <span class="tool-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <path d="M7 3h8l4 4v14H7z"></path>
+            <path d="M15 3v4h4M10 12h6M10 16h6"></path>
+          </svg>
+        </span>
         <div class="tool-content">
           <h3>Crypto Tax Estimator</h3>
           <p>Get a fast tax estimate by country for your realized crypto gains.</p>
